# smart-home

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
hello-world/src/: main.cpp
scripts/: AttachUsbDeviceToWsl.ps1  README.md  create_udev_rule.sh  set-usb-serial-rule.sh
sensors/air-temperature-humidity/: platformio.ini
sensors/air-temperature-humidity-espidf/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.esp32dev
sensors/air-temperature-humidity-espidf/src/: Sht35.cpp  Sht35.h  main.c  main.cpp  memory.c  mqtt.c  mqtt.h  wifi.c
sensors/air-temperature-humidity/src/: main.cpp
sensors/air-temperature-humidity/src/sensors/: Sht35.cpp  Sht35.h
sensors/air-temperature-humidity/src/utils/: Log.cpp  Log.h
